feat(solution.ipynb): completed most of the trajectoryError function

--- a/solution.ipynb
+++ b/solution.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,18 +59,18 @@
     "    i = 0 # iterator over the theoretical path\n",
     "    \n",
     "    # start iterations:\n",
-    "    while i+1 <= len(coordTh) and j+1 <= len(coordexp):\n",
+    "    while i+1 <= len(coordTh) and j+1 <= len(coordExp):\n",
     "        # we work on a subsegment [coordTh[i], coordTh[i+1]] \n",
     "        \n",
     "        # search for an intersection:\n",
-    "        intersectPoint = intersection(coordTh[i], coordTh[i+1], coordexp[j], coordexp[j+1])\n",
+    "        intersectPoint = intersection(coordTh[i], coordTh[i+1], coordExp[j], coordExp[j+1])\n",
     "        \n",
     "        # compute the orthogonal projections of the experimental points on the subsegment\n",
-    "        ort1 = ortogonalProjection(coordTh[i], coordTh[i+1], coordexp[j])\n",
-    "        ort2 = ortogonalProjection(coordTh[i], coordTh[i+1], coordexp[j+1]) \n",
+    "        ort1 = ortogonalProjection(coordTh[i], coordTh[i+1], coordExp[j])\n",
+    "        ort2 = ortogonalProjection(coordTh[i], coordTh[i+1], coordExp[j+1]) \n",
     "        \n",
     "        if intersectPoint:\n",
-    "            if intersectPoint == coordTh[i+1] == coordexp[j]:\n",
+    "            if intersectPoint == coordTh[i+1] == coordExp[j]:\n",
     "                # we're outside of the subsegment\n",
     "                i += 1 # advance along the theoretical path       \n",
     "            else:\n",
@@ -82,26 +82,47 @@
     "                \n",
     "                # After the intersection:\n",
     "                # the points form the right triangle -> intersectPoint, coordth[i+1], coordexp[i+1]\n",
-    "                base = seg_length(coordexp[j+1], intersectPoint)\n",
-    "                height =  seg_length(coordTh[i+1], ortogonalProjection(coordexp[j+1], intersectPoint, coordTh[i]))\n",
+    "                base = seg_length(coordExp[j+1], intersectPoint)\n",
+    "                height =  seg_length(coordTh[i+1], ortogonalProjection(coordExp[j+1], intersectPoint, coordTh[i]))\n",
     "                areaRightTriangle(base, height)\n",
     "                \n",
     "                j += 1 # advance along the experimental path  \n",
     "        else:      \n",
     "            if ort1 and ort2:\n",
-    "                area += computeArea(ort1, ort2, coordexp[j], coordexp[j+1])\n",
-    "                j += 1 # advance along the experimental path\n",
+    "                area += computeArea(ort1, ort2, coordExp[j], coordExp[j+1])\n",
+    "                # advance along the experimental path\n",
+    "                j += 1 \n",
     "            elif ort1:\n",
     "                # area is given by the triangle -> exp[j], ort1, exp[j+1]\n",
+    "                base = seg_length(coordExp[j], coordExp[j+1])\n",
+    "                height =  seg_length(ort1, ortogonalProjection(coordExp[j], coordExp[j+1], ort1))\n",
+    "                area += areaRightTriangle(base, height)\n",
     "                #              and the triangle -> ort1, exp[j+1], th[i+1]\n",
-    "                pass\n",
+    "                base = seg_length(coordTh[i+1], coordExp[j+1])\n",
+    "                height =  seg_length(ort1, ortogonalProjection(coordExp[j], coordExp[j+1], ort1))\n",
+    "                area += areaRightTriangle(base, height)\n",
+    "                # advance along the experimental path\n",
+    "                j += 1 \n",
     "            elif ort2:\n",
     "                # area is given by the triangle -> exp[j], th[i], exp[j+1]\n",
+    "                base = seg_length(coordExp[j], coordExp[j+1])\n",
+    "                height =  seg_length(coordTh[i], ortogonalProjection(coordExp[j], coordExp[j+1], coordTh[i]))\n",
+    "                area += areaRightTriangle(base, height)\n",
     "                #              and the triangle -> th[i], exp[j+1], ort2\n",
-    "                pass\n",
+    "                base = seg_length(coordTh[i], coordExp[j+1])\n",
+    "                height =  seg_length(ort2, ortogonalProjection(coordTh[i], coordExp[j+1], ort2))\n",
+    "                area += areaRightTriangle(base, height)\n",
+    "                # advance along the experimental path\n",
+    "                j += 1 \n",
     "            else:\n",
-    "                pass\n",
-    "                i += 1 # advance along the theoretical path\n",
+    "                # advance along the theoretical path\n",
+    "                i += 1 \n",
+    "                \n",
+    "        ## TODO check for backtracking:\n",
+    "        \n",
+    "        # a) if ort1 or ort2 in in segment [ coordTh[i] , prevOrt1 ] or [ coordTh[i] , prevOrt2 ]\n",
+    "        \n",
+    "        # b) identify the area to remove \n",
     "                \n",
     "    return area / distance\n",
     "\n",
@@ -204,7 +225,7 @@
     "        # -x + a*y = -c\n",
     "        mat = np.array([a,-1],[-1,a])\n",
     "        # Not invertible if a = +- 1 : ???\n",
-    "        point = np.dot(lin.inv(mat)*,np.array([-b,-c]))\n",
+    "        point = np.dot(lin.inv(mat), np.array([-b,-c]))\n",
     "        newPoint = (point[0],point[1])\n",
     "    \n",
     "    ## express the line passing by x_1 and x_2\n",
@@ -271,6 +292,13 @@
     "    \"\"\"\n",
     "    return np.abs((base * height) / 2)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
