fix(test): test order fix

--- a/test.ipynb
+++ b/test.ipynb
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,8 +287,8 @@
     "    def test_simplestIntersection(self):\n",
     "        segA_1 = (0,0)\n",
     "        segA_2 = (2,2)\n",
-    "        segB_1 = (0,2)\n",
-    "        segB_2 = (2,0)\n",
+    "        segB_1 = (2,0)\n",
+    "        segB_2 = (0,2)\n",
     "        \n",
     "        self.assertEqual((1,1), sl.intersection(segA_1, segA_2, segB_1, segB_2))# expected (1,1)\n",
     "        \n",
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -454,25 +454,75 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "........F\n",
+      "........F.FFFFF\n",
       "======================================================================\n",
       "FAIL: test_simplestIntersection (__main__.TestIntersection)\n",
       "----------------------------------------------------------------------\n",
       "Traceback (most recent call last):\n",
-      "  File \"<ipython-input-7-b76c09564d79>\", line 12, in test_simplestIntersection\n",
+      "  File \"<ipython-input-12-cd0a82fd0995>\", line 12, in test_simplestIntersection\n",
       "    self.assertEqual((1,1), sl.intersection(segA_1, segA_2, segB_1, segB_2))# expected (1,1)\n",
       "AssertionError: (1, 1) != None\n",
       "\n",
+      "======================================================================\n",
+      "FAIL: test_square (__main__.TestComputeArea)\n",
       "----------------------------------------------------------------------\n",
-      "Ran 9 tests in 0.011s\n",
+      "Traceback (most recent call last):\n",
+      "  File \"<ipython-input-14-ca4d5dfba276>\", line 20, in test_square\n",
+      "    self.assertEqual(1, sl.computeArea(segA_1, segA_2, segB_1, segB_2))# expected 1\n",
+      "  File \"C:\\Users\\Zotto\\Documents\\_Scuola\\DataSci\\M1-S1\\RefresherCS\\CSRefresh_Project\\solution.py\", line 245, in computeArea\n",
+      "    assert((y_1[1]-x_1[1])/(y_1[0]-x_1[0]) == (x_2[1]-y_2[1])/(x_2[0]-y_2[0]))\n",
+      "AssertionError\n",
       "\n",
-      "FAILED (failures=1)\n"
+      "======================================================================\n",
+      "FAIL: test_trapezoidNegative (__main__.TestComputeArea)\n",
+      "----------------------------------------------------------------------\n",
+      "Traceback (most recent call last):\n",
+      "  File \"<ipython-input-14-ca4d5dfba276>\", line 44, in test_trapezoidNegative\n",
+      "    self.assertEqual(1.5, sl.computeArea(segA_1, segA_2, segB_1, segB_2))# expected 1.5\n",
+      "  File \"C:\\Users\\Zotto\\Documents\\_Scuola\\DataSci\\M1-S1\\RefresherCS\\CSRefresh_Project\\solution.py\", line 245, in computeArea\n",
+      "    assert((y_1[1]-x_1[1])/(y_1[0]-x_1[0]) == (x_2[1]-y_2[1])/(x_2[0]-y_2[0]))\n",
+      "AssertionError\n",
+      "\n",
+      "======================================================================\n",
+      "FAIL: test_trapezoidNegativePositive (__main__.TestComputeArea)\n",
+      "----------------------------------------------------------------------\n",
+      "Traceback (most recent call last):\n",
+      "  File \"<ipython-input-14-ca4d5dfba276>\", line 52, in test_trapezoidNegativePositive\n",
+      "    self.assertEqual(10.5, sl.computeArea(segA_1, segA_2, segB_1, segB_2))# expected 10.5\n",
+      "  File \"C:\\Users\\Zotto\\Documents\\_Scuola\\DataSci\\M1-S1\\RefresherCS\\CSRefresh_Project\\solution.py\", line 245, in computeArea\n",
+      "    assert((y_1[1]-x_1[1])/(y_1[0]-x_1[0]) == (x_2[1]-y_2[1])/(x_2[0]-y_2[0]))\n",
+      "AssertionError\n",
+      "\n",
+      "======================================================================\n",
+      "FAIL: test_trapezoidSimplest (__main__.TestComputeArea)\n",
+      "----------------------------------------------------------------------\n",
+      "Traceback (most recent call last):\n",
+      "  File \"<ipython-input-14-ca4d5dfba276>\", line 36, in test_trapezoidSimplest\n",
+      "    self.assertEqual(1.5, sl.computeArea(segA_1, segA_2, segB_1, segB_2))# expected 1.5\n",
+      "  File \"C:\\Users\\Zotto\\Documents\\_Scuola\\DataSci\\M1-S1\\RefresherCS\\CSRefresh_Project\\solution.py\", line 245, in computeArea\n",
+      "    assert((y_1[1]-x_1[1])/(y_1[0]-x_1[0]) == (x_2[1]-y_2[1])/(x_2[0]-y_2[0]))\n",
+      "AssertionError\n",
+      "\n",
+      "======================================================================\n",
+      "FAIL: test_triangle (__main__.TestComputeArea)\n",
+      "----------------------------------------------------------------------\n",
+      "Traceback (most recent call last):\n",
+      "  File \"<ipython-input-14-ca4d5dfba276>\", line 28, in test_triangle\n",
+      "    self.assertEqual(0.5, sl.computeArea(segA_1, segA_2, segB_1, segB_2))# expected 1\n",
+      "  File \"C:\\Users\\Zotto\\Documents\\_Scuola\\DataSci\\M1-S1\\RefresherCS\\CSRefresh_Project\\solution.py\", line 240, in computeArea\n",
+      "    assert x_1[0] == y_1[0]\n",
+      "AssertionError\n",
+      "\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 15 tests in 0.035s\n",
+      "\n",
+      "FAILED (failures=6)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<unittest.runner.TextTestResult run=9 errors=0 failures=1>"
+       "<unittest.runner.TextTestResult run=15 errors=0 failures=6>"
       ]
      },
      "execution_count": 17,
@@ -488,7 +538,7 @@
     "myTestSuite.addTests(loader.loadTestsFromTestCase(TestPathLength))\n",
     "myTestSuite.addTests(loader.loadTestsFromTestCase(TestOrthoProjection))\n",
     "myTestSuite.addTests(loader.loadTestsFromTestCase(TestIntersection))\n",
-    "#myTestSuite.addTests(loader.loadTestsFromTestCase(TestComputeArea))\n",
+    "myTestSuite.addTests(loader.loadTestsFromTestCase(TestComputeArea))\n",
     "#myTestSuite.addTests(loader.loadTestsFromTestCase(TestAreaRightTriangle))\n",
     "#myTestSuite.addTests(loader.loadTestsFromTestCase(TestTrajectoryError))\n",
     "# run!\n",
