feat(test): added new tests for intersection()

--- a/test.ipynb
+++ b/test.ipynb
@@ -306,7 +306,35 @@
     "        segB_1 = (0,0)\n",
     "        segB_2 = (0,-1)\n",
     "        \n",
-    "        self.assertEqual((0,0), sl.intersection(segA_1, segA_2, segB_1, segB_2))# expected (0,0)\n"
+    "        self.assertEqual((0,0), sl.intersection(segA_1, segA_2, segB_1, segB_2))# expected (0,0)\n",
+    "        \n",
+    "    def test_permutationOrderOne(self):\n",
+    "         ## same segemnts as test_simplestIntersection but given in a different order\n",
+    "        segA_1 = (0,0)\n",
+    "        segA_2 = (2,2)\n",
+    "        segB_1 = (2,0)\n",
+    "        segB_2 = (0,2)\n",
+    "        \n",
+    "        self.assertEqual((1,1), sl.intersection(segA_2, segA_1, segB_1, segB_2))# expected (1,1)\n",
+    "        \n",
+    "    def test_permutationOrderTwo(self):\n",
+    "         ## same segemnts as test_simplestIntersection but given in a different order\n",
+    "        segA_1 = (0,0)\n",
+    "        segA_2 = (2,2)\n",
+    "        segB_1 = (2,0)\n",
+    "        segB_2 = (0,2)\n",
+    "        \n",
+    "        self.assertEqual((1,1), sl.intersection(segA_1, segA_2, segB_2, segB_1))# expected (1,1)\n",
+    "        \n",
+    "    def test_permutationOrderThree(self):\n",
+    "         ## same segemnts as test_simplestIntersection but given in a different order\n",
+    "        segA_1 = (0,0)\n",
+    "        segA_2 = (2,2)\n",
+    "        segB_1 = (2,0)\n",
+    "        segB_2 = (0,2)\n",
+    "        \n",
+    "        self.assertEqual((1,1), sl.intersection(segB_1, segB_2, segA_1, segA_2))# expected (1,1)\n",
+    "\n"
    ]
   },
   {
