fix solution.ipynb : function intersect now works !

--- a/solution.ipynb
+++ b/solution.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,9 @@
     "    \n",
     "    # Third case : only the second line is vertical\n",
     "    elif y_1[0]  == y_2[0] :\n",
-    "        intersect = intersection(y_1,y_2,x_1,x_2)\n",
+    "        a = (x_1[1]-x_2[1])/(x_1[0]-x_2[0])\n",
+    "        b = x_2[1] - a * x_2[0]\n",
+    "        intersect = (y_1[0],a*y_1[0] + b)\n",
     "    \n",
     "    # Last case : general case\n",
     "    else :\n",
@@ -186,9 +188,8 @@
     "            #y = a_x*x + b_x\n",
     "            #y = a_y*x + b_y\n",
     "            # The solution is the inverted matrix\n",
-    "            intersect = ( (b_y-b_x)/(a_y-a_x),\\\n",
-    "                          (b_y * a_x - b_x * a_y)/(a_y - a_x) )\n",
-    "    \n",
+    "            intersect = ( (b_y-b_x)/(a_x-a_y),\\\n",
+    "                          (b_y * a_x - b_x * a_y)/(a_x - a_y) )\n",
     "    # If a point is found, check if it belongs to the segments and not only the lines (x_1[0]<intersect[0]<x_2[0] or...)\n",
     "    if intersect :\n",
     "        if not ( (intersect[0] >= min(x_1[0],x_2[0])) and (intersect[0] <= max(x_1[0],x_2[0]))\\\n",
