--- a/test.ipynb
+++ b/test.ipynb
@@ -482,22 +482,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "........F.FFFFF\n",
-      "======================================================================\n",
-      "FAIL: test_simplestIntersection (__main__.TestIntersection)\n",
-      "----------------------------------------------------------------------\n",
-      "Traceback (most recent call last):\n",
-      "  File \"<ipython-input-7-cd0a82fd0995>\", line 12, in test_simplestIntersection\n",
-      "    self.assertEqual((1,1), sl.intersection(segA_1, segA_2, segB_1, segB_2))# expected (1,1)\n",
-      "AssertionError: (1, 1) != None\n",
-      "\n",
+      ".............FFFFF\n",
       "======================================================================\n",
       "FAIL: test_square (__main__.TestComputeArea)\n",
       "----------------------------------------------------------------------\n",
       "Traceback (most recent call last):\n",
       "  File \"<ipython-input-9-ca4d5dfba276>\", line 20, in test_square\n",
       "    self.assertEqual(1, sl.computeArea(segA_1, segA_2, segB_1, segB_2))# expected 1\n",
-      "  File \"D:\\Université de Lille\\M1\\Refresher in Computer Science\\CSRefresh_project\\CSRefresh_Project\\solution.py\", line 251, in computeArea\n",
+      "  File \"D:\\Université de Lille\\M1\\Refresher in Computer Science\\CSRefresh_project\\CSRefresh_Project\\solution.py\", line 252, in computeArea\n",
       "    assert((y_1[1]-x_1[1])/(y_1[0]-x_1[0]) == (x_2[1]-y_2[1])/(x_2[0]-y_2[0]))\n",
       "AssertionError\n",
       "\n",
@@ -507,7 +499,7 @@
       "Traceback (most recent call last):\n",
       "  File \"<ipython-input-9-ca4d5dfba276>\", line 44, in test_trapezoidNegative\n",
       "    self.assertEqual(1.5, sl.computeArea(segA_1, segA_2, segB_1, segB_2))# expected 1.5\n",
-      "  File \"D:\\Université de Lille\\M1\\Refresher in Computer Science\\CSRefresh_project\\CSRefresh_Project\\solution.py\", line 251, in computeArea\n",
+      "  File \"D:\\Université de Lille\\M1\\Refresher in Computer Science\\CSRefresh_project\\CSRefresh_Project\\solution.py\", line 252, in computeArea\n",
       "    assert((y_1[1]-x_1[1])/(y_1[0]-x_1[0]) == (x_2[1]-y_2[1])/(x_2[0]-y_2[0]))\n",
       "AssertionError\n",
       "\n",
@@ -517,7 +509,7 @@
       "Traceback (most recent call last):\n",
       "  File \"<ipython-input-9-ca4d5dfba276>\", line 52, in test_trapezoidNegativePositive\n",
       "    self.assertEqual(10.5, sl.computeArea(segA_1, segA_2, segB_1, segB_2))# expected 10.5\n",
-      "  File \"D:\\Université de Lille\\M1\\Refresher in Computer Science\\CSRefresh_project\\CSRefresh_Project\\solution.py\", line 251, in computeArea\n",
+      "  File \"D:\\Université de Lille\\M1\\Refresher in Computer Science\\CSRefresh_project\\CSRefresh_Project\\solution.py\", line 252, in computeArea\n",
       "    assert((y_1[1]-x_1[1])/(y_1[0]-x_1[0]) == (x_2[1]-y_2[1])/(x_2[0]-y_2[0]))\n",
       "AssertionError\n",
       "\n",
@@ -527,7 +519,7 @@
       "Traceback (most recent call last):\n",
       "  File \"<ipython-input-9-ca4d5dfba276>\", line 36, in test_trapezoidSimplest\n",
       "    self.assertEqual(1.5, sl.computeArea(segA_1, segA_2, segB_1, segB_2))# expected 1.5\n",
-      "  File \"D:\\Université de Lille\\M1\\Refresher in Computer Science\\CSRefresh_project\\CSRefresh_Project\\solution.py\", line 251, in computeArea\n",
+      "  File \"D:\\Université de Lille\\M1\\Refresher in Computer Science\\CSRefresh_project\\CSRefresh_Project\\solution.py\", line 252, in computeArea\n",
       "    assert((y_1[1]-x_1[1])/(y_1[0]-x_1[0]) == (x_2[1]-y_2[1])/(x_2[0]-y_2[0]))\n",
       "AssertionError\n",
       "\n",
@@ -537,20 +529,20 @@
       "Traceback (most recent call last):\n",
       "  File \"<ipython-input-9-ca4d5dfba276>\", line 28, in test_triangle\n",
       "    self.assertEqual(0.5, sl.computeArea(segA_1, segA_2, segB_1, segB_2))# expected 1\n",
-      "  File \"D:\\Université de Lille\\M1\\Refresher in Computer Science\\CSRefresh_project\\CSRefresh_Project\\solution.py\", line 246, in computeArea\n",
+      "  File \"D:\\Université de Lille\\M1\\Refresher in Computer Science\\CSRefresh_project\\CSRefresh_Project\\solution.py\", line 247, in computeArea\n",
       "    assert x_1[0] == y_1[0]\n",
       "AssertionError\n",
       "\n",
       "----------------------------------------------------------------------\n",
-      "Ran 15 tests in 0.037s\n",
+      "Ran 18 tests in 0.032s\n",
       "\n",
-      "FAILED (failures=6)\n"
+      "FAILED (failures=5)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<unittest.runner.TextTestResult run=15 errors=0 failures=6>"
+       "<unittest.runner.TextTestResult run=18 errors=0 failures=5>"
       ]
      },
      "execution_count": 11,
