fix solution.ipynb : minor changes to computeArea function

--- a/solution.ipynb
+++ b/solution.ipynb
@@ -18,7 +18,7 @@
     "- reach a _vertex_ in the experimental trajectory\n",
     "\n",
     "How to calculate the error:\n",
-    "__The sum of the areas of the \"Trapezoid\" formed by two points on the theoretical trajectory and two points of the experimental trajectory__\n",
+    "__The sum of the areas of the \"Trapezium\" formed by two points on the theoretical trajectory and two points of the experimental trajectory__\n",
     "o When two points from the experimental and theoretical trajectories are equals, the area is a triangle. "
    ]
   },
@@ -244,28 +244,32 @@
     "    return: area. An int, the area of the figure formed by the 4 coordinates\n",
     "    \"\"\"\n",
     "    #Cases of triangles\n",
-    "    if x_1 == y_1 :\n",
-    "        # The triangle is formed by the segments x_1,x_2 and x_2,y_2\n",
-    "        area = seg_length(x_1,x_2) * seg_length(x_2,y_2) / 2\n",
-    "    elif x_2 == y_2 :\n",
-    "        area = seg_length(x_1,y_1) * seg_length(x_1,x_2)/2\n",
-    "                              \n",
-    "    # Assert the arguments really form a trapezoid, with (x_1,y_1) being parallel with (x_2,y_2)\n",
-    "    else :\n",
-    "        # Always check they are parallel\n",
-    "        # Case of vertical lines \n",
-    "        if x_1[0] == y_1[0]:\n",
-    "            assert x_2[0] == y_2[0]\n",
-    "            area = seg_length(x_1,x_2) * 0.5 * seg_length(x_1,y_1) * seg_length(x_2,y_2)\n",
-    "        elif x_2[0] == y_2[0]:\n",
-    "            assert x_1[0] == y_1[0]\n",
-    "            area = seg_length(x_1,x_2) * 0.5 * seg_length(x_1,y_1) * seg_length(x_2,y_2)\n",
-    "            \n",
-    "        else :\n",
-    "            # General case\n",
-    "            assert((y_1[1]-x_1[1])/(y_1[0]-x_1[0]) == (x_2[1]-y_2[1])/(x_2[0]-y_2[0]))\n",
-    "            area = seg_length(x_1,x_2) * 0.5 * seg_length(x_1,y_1) * seg_length(x_2,y_2)\n",
+    "    #if x_1 == y_1 :\n",
+    "    #    # The triangle is formed by the segments x_1,x_2 and x_2,y_2\n",
+    "    #    area = seg_length(x_1,x_2) * seg_length(x_2,y_2) / 2\n",
+    "    #elif x_2 == y_2 :\n",
+    "    #    area = seg_length(x_1,y_1) * seg_length(x_1,x_2)/2\n",
     "    \n",
+    "    # Assert the 4 points are distinct\n",
+    "    assert ( (x_1 != y_1) and (x_2 != y_2) and (x_1 != x2) )\n",
+    "    \n",
+    "    # Bonus : Assert it is a right trapezium with (x_1,y_1) parallel to (x_2,y_2) and (x_1,x_2) orthogonal to these two\n",
+    "    # Bonus 2 : Assert the arguments really form a trapezium, with (x_1,y_1) being parallel with (x_2,y_2)\n",
+    "    \n",
+    "    # Always check they are parallel\n",
+    "    # Case of vertical lines\n",
+    "    if x_1[0] == y_1[0]:\n",
+    "        assert x_2[0] == y_2[0]\n",
+    "        area = seg_length(x_1,x_2) * 0.5 * seg_length(x_1,y_1) * seg_length(x_2,y_2)\n",
+    "    elif x_2[0] == y_2[0]:\n",
+    "        assert x_1[0] == y_1[0]\n",
+    "        area = seg_length(x_1,x_2) * 0.5 * seg_length(x_1,y_1) * seg_length(x_2,y_2)\n",
+    "\n",
+    "    else :\n",
+    "        # General case\n",
+    "        assert((y_1[1]-x_1[1])/(y_1[0]-x_1[0]) == (x_2[1]-y_2[1])/(x_2[0]-y_2[0]))\n",
+    "        area = seg_length(x_1,x_2) * 0.5 * seg_length(x_1,y_1) * seg_length(x_2,y_2)\n",
+    "\n",
     "    return area\n",
     "\n",
     "def areaRightTriangle(base, height):\n",
