fix: advancements on trajectoryerror. TODO: rethink computeArea

--- a/solution.ipynb
+++ b/solution.ipynb
@@ -75,9 +75,9 @@
     "                i += 1 # advance along the theoretical path       \n",
     "            else:\n",
     "                # Before the intersection:\n",
-    "                # the points form the right triangle -> ort1, intersectPoint, coordexp[j]  \n",
-    "                base = seg_length(coordexp[j], intersectPoint)\n",
-    "                height =  seg_length(coordTh[i], ortogonalProjection(coordexp[j], intersectPoint, coordTh[i]))\n",
+    "                # the points form the right triangle -> ort1, intersectPoint, coordExp[j]  \n",
+    "                base = seg_length(coordExp[j], intersectPoint)\n",
+    "                height =  seg_length(coordTh[i], ortogonalProjection(coordExp[j], intersectPoint, coordTh[i]))\n",
     "                area += areaRightTriangle(base, height)\n",
     "                \n",
     "                # After the intersection:\n",
@@ -89,7 +89,16 @@
     "                j += 1 # advance along the experimental path  \n",
     "        else:      \n",
     "            if ort1 and ort2:\n",
-    "                area += computeArea(ort1, ort2, coordExp[j], coordExp[j+1])\n",
+    "                #area += computeArea(ort1, ort2, coordExp[j], coordExp[j+1])\n",
+    "                \n",
+    "                # area is given by the triangle -> ort1, ort2, exp[j]\n",
+    "                base = seg_length(coordExp[j], ort2)\n",
+    "                height =  seg_length(ort1, ortogonalProjection(coordExp[j], ort2, ort1))\n",
+    "                area += areaRightTriangle(base, height)\n",
+    "                #              and the triangle ->  exp[j], exp[j+1], ort2\n",
+    "                base = seg_length(coordExp[j], ort2)\n",
+    "                height =  seg_length(exp[j+1], ortogonalProjection(coordExp[j], ort2, exp[j+1]))\n",
+    "                area += areaRightTriangle(base, height)\n",
     "                # advance along the experimental path\n",
     "                j += 1 \n",
     "            elif ort1:\n",
@@ -236,7 +245,7 @@
     "                       \n",
     "\n",
     "\n",
-    "def computeArea(x_1, x_2, y_1, y_2): # TODO: retirer cas des triangles.\n",
+    "def computeArea(x_1, x_2, y_1, y_2): # TODO: change so it computes the area as 2 triangles like in trajectoryError()\n",
     "                       \n",
     "    \"\"\" \n",
     "    arg1,2 x_i: A tuple, the coordinates of a point on the theoretical trajectory\n",
