feat: refactoring of compute area

--- a/solution.ipynb
+++ b/solution.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,6 +252,19 @@
     "    arg3,4 y_i: A tuple, the coordinates of a point on the experimental trajectory\n",
     "    return: area. An int, the area of the figure formed by the 4 coordinates\n",
     "    \"\"\"\n",
+    "    area = 0\n",
+    "    \n",
+    "    # first triangle:\n",
+    "    base = seg_length(x_1, x_2)\n",
+    "    height =  seg_length(y_1, ortogonalProjection(x_1, x_2, y_1))\n",
+    "    area += areaRightTriangle(base, height)\n",
+    "    \n",
+    "    # second triangle:\n",
+    "    base = seg_length(x_1, x_2)\n",
+    "    height =  seg_length(y_2, ortogonalProjection(x_1, x_2, y_2))\n",
+    "    area += areaRightTriangle(base, height)\n",
+    "    \n",
+    "    ####### old:\n",
     "    #Cases of triangles\n",
     "    #if x_1 == y_1 :\n",
     "    #    # The triangle is formed by the segments x_1,x_2 and x_2,y_2\n",
@@ -260,24 +273,24 @@
     "    #    area = seg_length(x_1,y_1) * seg_length(x_1,x_2)/2\n",
     "    \n",
     "    # Assert the 4 points are distinct\n",
-    "    assert ( (x_1 != y_1) and (x_2 != y_2) and (x_1 != x2) )\n",
+    "    #assert ( (x_1 != y_1) and (x_2 != y_2) and (x_1 != x2) )\n",
     "    \n",
     "    # Bonus : Assert it is a right trapezium with (x_1,y_1) parallel to (x_2,y_2) and (x_1,x_2) orthogonal to these two\n",
     "    # Bonus 2 : Assert the arguments really form a trapezium, with (x_1,y_1) being parallel with (x_2,y_2)\n",
     "    \n",
     "    # Always check they are parallel\n",
     "    # Case of vertical lines\n",
-    "    if x_1[0] == y_1[0]:\n",
-    "        assert x_2[0] == y_2[0]\n",
-    "        area = seg_length(x_1,x_2) * 0.5 * seg_length(x_1,y_1) * seg_length(x_2,y_2)\n",
-    "    elif x_2[0] == y_2[0]:\n",
-    "        assert x_1[0] == y_1[0]\n",
-    "        area = seg_length(x_1,x_2) * 0.5 * seg_length(x_1,y_1) * seg_length(x_2,y_2)\n",
+    "    #if x_1[0] == y_1[0]:\n",
+    "    #    assert x_2[0] == y_2[0]\n",
+    "    #    area = seg_length(x_1,x_2) * 0.5 * seg_length(x_1,y_1) * seg_length(x_2,y_2)\n",
+    "    #elif x_2[0] == y_2[0]:\n",
+    "    #    assert x_1[0] == y_1[0]\n",
+    "    #    area = seg_length(x_1,x_2) * 0.5 * seg_length(x_1,y_1) * seg_length(x_2,y_2)\n",
     "\n",
-    "    else :\n",
+    "    #else :\n",
     "        # General case\n",
-    "        assert((y_1[1]-x_1[1])/(y_1[0]-x_1[0]) == (x_2[1]-y_2[1])/(x_2[0]-y_2[0]))\n",
-    "        area = seg_length(x_1,x_2) * 0.5 * seg_length(x_1,y_1) * seg_length(x_2,y_2)\n",
+    "    #    assert((y_1[1]-x_1[1])/(y_1[0]-x_1[0]) == (x_2[1]-y_2[1])/(x_2[0]-y_2[0]))\n",
+    "    #    area = seg_length(x_1,x_2) * 0.5 * seg_length(x_1,y_1) * seg_length(x_2,y_2)\n",
     "\n",
     "    return area\n",
     "\n",
@@ -291,13 +304,6 @@
     "    \"\"\"\n",
     "    return np.abs((base * height) / 2)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
